# safety-net-backend

./: .env.example  Cargo.toml  Dockerfile  nixpacks.toml  railway.json
migrations/: 001_users.sql  002_positions.sql  003_alerts.sql  004_billing.sql  005_executor_state.sql
src/: main.rs
src/alerter/: email.rs  mod.rs  push.rs  telegram.rs
src/api/: auth.rs  graphql.rs  mod.rs  rate_limit.rs  ws.rs
src/billing/: fees.rs  mod.rs  x402.rs
src/data/: db.rs  mod.rs  models.rs  store.rs
src/executor/: calldata.rs  mod.rs  orchestrator.rs  signer.rs  simulator.rs  submitter.rs  tx_state.rs
src/indexer/: block_subscriber.rs  mod.rs  position_indexer.rs
src/monitors/: drawdown_monitor.rs  health_monitor.rs  lp_monitor.rs  mod.rs
src/protocols/: aave_v3.rs  abi.rs  mod.rs  uniswap_v3.rs
src/test_utils/: mock_provider.rs  mod.rs
